--- a/lineman/app/modules/discussion_page/proposals_card/proposal_expanded/proposal_expanded.haml
+++ b/lineman/app/modules/discussion_page/proposals_card/proposal_expanded/proposal_expanded.haml
@@ -1,4 +1,4 @@
-.proposal-card{ng-show: 'proposal'}
+.proposal-card.proposal-expanded{ng-show: 'proposal'}
   %proposal_card_dropdown{proposal: 'proposal'}
   %h2 {{::proposal.name}}
   .proposal-card-started-by
