--- a/lineman/app/modules/discussion_page/proposals_card/proposal_expanded/proposal_actions_dropdown.haml
+++ b/lineman/app/modules/discussion_page/proposals_card/proposal_expanded/proposal_actions_dropdown.haml
@@ -1,4 +1,4 @@
-.proposal-card-edit.pull-right{dropdown: '', on-toggle: 'toggled(open)'}
+.proposal-actions-dropdown.pull-right{dropdown: '', on-toggle: 'toggled(open)'}
   %a.dropdown-toggle{href: '#'}
     %i.fa.fa-chevron-down
   .dropdown-menu.dropdown-menu-with-labels.dropdown-menu-right{role: 'menu'}
