--- a/lineman/app/modules/discussion_page/proposals_card/vote_form/vote_form.haml
+++ b/lineman/app/modules/discussion_page/proposals_card/vote_form/vote_form.haml
@@ -20,7 +20,7 @@
 
       %button.btn.btn-primary{type: 'submit', translate: 'vote_form.submit_position'}>
 
-      %button.btn.btn-default{ng-click: 'cancel($event)', translate: 'common.action.cancel'}>
+      %button.btn.btn-default{ng-click: 'cancel($event)', type: 'button', translate: 'common.action.cancel'}>
 
   .your-position{ng-show: 'lastVote() && !editing'}
     %h4{translate: 'proposal_card.your_position'}
