--- a/lineman/app/modules/discussion_page/proposals_card/proposals_card.haml
+++ b/lineman/app/modules/discussion_page/proposals_card/proposals_card.haml
@@ -2,9 +2,9 @@
   %h3.first Proposal
 
   %div{ng_repeat: 'proposal in discussion.proposals()'}
-    .active-proposal{ng-show: 'isExpanded(proposal)'}
+    .active-proposal{ng-if: 'isExpanded(proposal)'}
       %proposal_expanded{proposal: 'proposal'}
       %h3{ng-show: "discussion.proposals().length > 1"} Previous proposals
 
-    .inactive-proposal{ng-hide: 'isExpanded(proposal)', ng_click: 'expand(proposal)'}
+    .inactive-proposal{ng-if: '!isExpanded(proposal)', ng_click: 'selectProposal(proposal)'}
       %proposal_collapsed{proposal: 'proposal'}
