working on fixing up start discussion

--- a/lineman/app/modules/discussion_page/discussion_items/new_motion.haml
+++ b/lineman/app/modules/discussion_page/discussion_items/new_motion.haml
@@ -1,4 +1,4 @@
-.thread-event.thread-vote{ng-controller: 'NewProposalItemController'}
+.thread-event.thread-new-proposal-item{ng-controller: 'NewProposalItemController'}
   .thread-event-header.media
     .media-left
       .thread-event-proposal-icon
