--- a/lineman/app/modules/discussion_page/discussion_items/new_vote.haml
+++ b/lineman/app/modules/discussion_page/discussion_items/new_vote.haml
@@ -1,4 +1,4 @@
-.thread-event.thread-vote{ng-controller: 'NewVoteItemController'}
+.thread-event.thread-new-vote-item{ng-controller: 'NewVoteItemController'}
   .thread-event-header.media
     .media-left
       .thread-event-vote-icon{class: 'thread-event-vote-icon-{{vote.position}}'}
