--- a/lineman/app/modules/discussion_page/proposals_card/vote_form/vote_form.haml
+++ b/lineman/app/modules/discussion_page/proposals_card/vote_form/vote_form.haml
@@ -18,7 +18,7 @@
             %span{translate: 'vote_form.select_position', ng-show: '!vote.position'}
           %textarea#vote-statement-field.form-control{ng-model: 'vote.statement', placeholder: '{{ "vote_form.statement_placeholder" | translate }}'}
 
-      %button.btn.btn-primary{type: 'submit', translate: 'vote_form.submit_position'}>
+      %button.btn.btn-primary.cuke-submit-position{type: 'submit', translate: 'vote_form.submit_position'}>
 
       %button.btn.btn-default{ng-click: 'cancel($event)', type: 'button', translate: 'common.action.cancel'}>
 
