--- a/lineman/app/css/main.scss
+++ b/lineman/app/css/main.scss
@@ -1,193 +1,5 @@
 @import 'bootstrap_overrides';
 @import 'bootstrap';
+@import '../modules/settings';
+@import 'modules';
 
-$primary-text-color: #333;
-$meta-text-color: #888;
-$thread-border-color: #ddd;
-$item-highlight-color: #FFFFE8;
-$list-hover-color: #E0E0E0;
-$loomio-orange: #F6A82B;
-
-/* let's come up with a good naming scheme for the greys once we lock them in*/
-$light-grey: #F5F5F5;
-$kinda-dark-grey: #545454;
-$thread-max-width: 640px;
-$group-page-max-width: 640px;
-$sidebar-width: 320px;
-
-@mixin fontSmall {
-  font-size: 13px;
-  line-height: 15px;
-}
-
-@mixin fontMedium {
-  font-size: 14px;
-  line-height: 20px;
-}
-
-@mixin fontLarge {
-  font-size: 20px;
-  line-height: 24px;
-}
-
-@mixin fontGrande {
-  font-size: 22px;
-  line-height: 27px;
-}
-
-
-@mixin fontHelvetica {
-  font-family: "HelveticaNeue", "Helvetica Neue", "HelveticaNeueRoman", "HelveticaNeue-Roman", "Helvetica Neue Roman", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
-  font-weight:400;
-  font-stretch:normal;
-}
-@mixin fontHelveticaLight {
-  font-family: "HelveticaNeueLight", "HelveticaNeue-Light", "Helvetica Neue Light", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
-  font-weight:300;
-  font-stretch:normal;
-}
-@mixin fontHelveticaBold {
-  font-family: "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold",
-    "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Helvetica", "Tahoma",
-    "Geneva", "Arial", sans-serif;
-  font-weight:600;
-  font-stretch:normal;
-}
-
-@mixin fontHelveticaMedium{
-  font-family: "HelveticaNeueMedium", "HelveticaNeue-Medium", "Helvetica Neue Medium", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
-  font-weight:500;
-  font-stretch:normal;
-}
-
-@mixin metaText {
-  color: $meta-text-color;
-  @include fontSmall;
-  line-height: 20px;
-}
-
-@mixin card{
-  border: 1px solid $thread-border-color;
-  padding: 15px;
-  background: #fff;
-  margin-bottom: 10px;
-  i{
-    color: $meta-text-color;
-  }
-  .card-minor-action{
-    margin: 10px 0 0 0;
-    clear: both;
-  }
-}
-
-.btn-icon{
-  text-align: left;
-}
-.btn-success.btn-icon i.fa{ color: #fff; }
-.btn-icon i.fa{ padding-right: 2px; }
-.btn.btn-icon{ padding: 6px 12px 6px 9px;}
-.avatar-initials{
-  width: 30px;
-  height: 30px;
-  background: $thread-border-color;
-  border: 1px solid #aaa;
-  text-align: center;
-  line-height: 30px;
-}
-.avatar-image img{
-  width: 30px;
-  height: 30px;
-}
-.lg .avatar-image img, .lg .avatar-initials{
-  width: 50px;
-  height: 50px;
-}
-.timeago{
-  @include metaText;
-}
-.dropdown-menu-with-labels{
-  padding: 15px;
-  width: 300px;
-}
-.dropdown-menu-items{
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-.dropdown-menu-item{
-  margin-bottom: 10px;
-  cursor: pointer;
-}
-.disabled .dropdown-menu-item{
-  cursor: auto;
-}
-.dropdown-menu-item.last{
-  margin-bottom: 0;
-}
-.dropdown-menu-item-label{
-  font-weight: bold;
-  line-height: 24px;
-  i{ font-weight: normal; }
-}
-.disabled .dropdown-menu-item{
-  color: $kinda-dark-grey;
-}
-
-h3.dropdown-heading{
-  margin: 0 0 10px 0;
-  border-bottom: 1px solid $thread-border-color;
-}
-.dropdown-menu-right{
-  /*left: auto;*/
-  right: 0;
-}
-
-.label-with-details{
-  font-weight: bold;
-}
-.label-with-details-label:after{
-  content: ": ";
-}
-.label-with-details-details{
-  font-weight: normal;
-}
-
-label.label-with-details{
-  margin-left: 5px;
-}
-
-.fa-volume-off-padded{margin: 0 6px 0 3px;}
-
-.form-card{
-  @include card;
-  max-width: 480px;
-  margin: 10px auto;
-}
-
-.form-group{
-  margin-top: 20px;
-}
-input, select, textarea{
-  margin-bottom: 10px;
-}
-textarea{
-  min-height: 100px;
-}
-input[type="file"]{
-  /*This is a hack for now to fix the mobile layout. The file input should be hidden.*/
-  max-width: 200px;
-}
-
-@import 'base';
-@import 'layout';
-
-@import '../modules/timeago/timeago.scss';
-@import '../modules/profile_page/profile_page.scss';
-@import '../modules/group_page/group_page.scss';
-@import '../modules/flash/flash.scss';
-@import '../modules/discussion_page/thread.scss';
-@import '../modules/discussion_page/proposals_card/vote_form/vote_form.scss';
-@import '../modules/discussion_page/proposals_card/proposals_card.scss';
-@import '../modules/discussion_page/proposals_card/proposal_pie_chart/proposal_pie_chart.scss';
-@import '../modules/discussion_page/proposals_card/proposal_expanded/proposal_expanded.scss';
-@import '../modules/discussion_page/proposals_card/proposal_collapsed/proposal_collapsed.scss';
