--- a/lineman/app/modules/discussion_page/thread.scss
+++ b/lineman/app/modules/discussion_page/thread.scss
@@ -4,7 +4,21 @@
   @include card;
 }
 
-.thread-discussion {
+.thread-actions {
+  position: relative;
+}
+.thread-actions .dropdown{
+  float: left;
+  position: static;
+}
+.thread-container .dropdown-menu-right{
+  right: -16px;
+}
+.thread-notification-level .dropdown-toggle{
+  width: 30px;
+  height: 30px;
+  display: block;
+  text-align: center;
 }
 
 .thread-proposals {
@@ -23,7 +37,7 @@
 }
 .thread-origin-group-logo{
   width: 30px;
-  height: 30px; 
+  height: 30px;
 }
 
 .thread-event {
