lots more coverage and improved permissions and details.. about to do change close time

--- a/lineman/app/modules/discussion_page/proposals_card/proposal_expanded/proposal_expanded.haml
+++ b/lineman/app/modules/discussion_page/proposals_card/proposal_expanded/proposal_expanded.haml
@@ -1,15 +1,14 @@
 .proposal-expanded{ng-show: 'proposal'}
-  %proposal_actions_dropdown{proposal: 'proposal'}
-  %h2 {{::proposal.name}}
+  %proposal_actions_dropdown{proposal: 'proposal', ng-show: 'showActionsDropdown()'}
+  %h2 {{proposal.name}}
   .proposal-expanded-started-by
-    %span{translate: 'proposal_card.started_by', translate-values: '::{name: proposal.authorName()}'}
+    %span{translate: 'proposal_expanded.started_by', translate-values: '{name: proposal.authorName()}'}
     %span.time-ago>
       {{discussion.createdAt | timeFromNowInWords}}
     ·
     %timeago{timestamp: 'proposal.closingAt' }>
-    .badge.pull-right{ng-show: 'proposal.closedAt'} Closed
+    .badge.pull-right.cuke-proposal-closed-badge{ng-show: 'proposal.closedAt'} Closed
   .proposal-expanded-description{btf-markdown: 'proposal.description' }
-
 
   .pie-chart.media
     .pie-chart-pie.media-left
@@ -22,9 +21,9 @@
 
   .proposal-expanded-votes
     %h4 Positions
-    .proposal-expanded-no-votes{ng-show: 'onlyVoterIsYou()', translate: 'proposal_card.only_voter_is_you'}
+    .proposal-expanded-no-votes{ng-show: 'onlyVoterIsYou()', translate: 'proposal_expanded.only_voter_is_you'}
 
-    .proposal-expanded-no-votes{ng-show: 'noVotesYet()', translate: 'proposal_card.no_votes_yet'}
+    .proposal-expanded-no-votes{ng-show: 'noVotesYet()', translate: 'proposal_expanded.no_votes_yet'}
 
     -#.proposal-expanded-vote.media{ng_repeat: 'vote in curatedVotes()'}
     .proposal-expanded-vote.media{ng_repeat: 'vote in curatedVotes()'}
@@ -32,4 +31,4 @@
         .thread-event-vote-icon{class: 'thread-event-vote-icon-{{vote.position}}'}
       .media-body
         %strong> {{::vote.authorName()}}
-        %span.author-statement {{:: vote.statement }}
+        %span.author-statement {{vote.statement }}
