--- a/lineman/app/modules/discussion_page/proposals_card/close_proposal_form/close_proposal_form.haml
+++ b/lineman/app/modules/discussion_page/proposals_card/close_proposal_form/close_proposal_form.haml
@@ -1,4 +1,4 @@
-%form{ng-submit: 'submit()'}
+%form{ng-submit: 'submit()', ng-disabled: 'proposal.saving'}
   .modal-header
     %button{type: 'button', class: 'close', ng-click: 'cancel()'}
       %span{aria-hidden: true} &times;
@@ -9,5 +9,5 @@
     %span{translate: 'close_proposal_form.helptext'}
 
   .modal-footer
-    %button.btn.btn-primary{type: 'submit', translate: 'close_proposal_form.close_proposal_submit'}
-    %button.btn.btn-warning{ng-click: 'cancel($event)', translate: 'common.action.cancel'}
+    %button.btn.btn-primary.cuke-close-proposal-btn{type: 'submit', translate: 'close_proposal_form.close_proposal_submit'}
+    %button.btn.btn-warning{type: 'button', ng-click: 'cancel($event)', translate: 'common.action.cancel'}
