--- a/lineman/app/modules/discussion_page/proposals_card/proposal_expanded/proposal_actions_dropdown.haml
+++ b/lineman/app/modules/discussion_page/proposals_card/proposal_expanded/proposal_actions_dropdown.haml
@@ -1,11 +1,16 @@
 .proposal-actions-dropdown.pull-right{dropdown: '', on-toggle: 'toggled(open)'}
-  %a.dropdown-toggle{href: '#'}
+  %a.dropdown-toggle.cuke-proposal-actions-dropdown-btn{href: '#'}
     %i.fa.fa-chevron-down
   .dropdown-menu.dropdown-menu-with-labels.dropdown-menu-right{role: 'menu'}
     %ul.dropdown-menu-items
-      %li.dropdown-menu-item{ng_click: 'editProposal()'}
+      %li.dropdown-menu-item.cuke-edit-proposal{ng-if: 'canEditProposal()', ng_click: 'editProposal()'}
         .dropdown-menu-item-label
-          %span{translate: 'proposal_card.edit_proposal'}
-      %li.dropdown-menu-item{ng_click: 'closeProposal()'}
+          %span{translate: 'proposal_expanded.edit_proposal'}
+
+      %li.dropdown-menu-item{ng-if: '!canEditProposal() && canCloseOrExtendProposal()', ng_click: 'extendProposal()'}
         .dropdown-menu-item-label
-          %span{translate: 'proposal_card.close_proposal'}
+          %span{translate: 'proposal_expanded.extend_proposal'}
+
+      %li.dropdown-menu-item.cuke-close-proposal{ng-if: 'canCloseOrExtendProposal()', ng_click: 'closeProposal()'}
+        .dropdown-menu-item-label
+          %span{translate: 'proposal_expanded.close_proposal'}
