--- a/lineman/app/modules/discussion_page/proposals_card/proposal_form/proposal_form.haml
+++ b/lineman/app/modules/discussion_page/proposals_card/proposal_form/proposal_form.haml
@@ -32,6 +32,6 @@
           %datetimepicker{ng-model: 'proposal.closingAt', data-datetimepicker-config: "{ startView:'day', minView:'hour'}", on-set-time: 'closeDateTimePicker()'}
 
   .modal-footer
-    %button.btn.btn-primary.cuke-start-proposal-btn{ng-if: 'proposal.isNew()', type: 'submit', translate: 'proposal_form.start_proposal'}
-    %button.btn.btn-primary{ng-if: '!proposal.isNew()', type: 'submit', translate: 'common.action.save'}
+    %button.btn.btn-primary.cuke-save-proposal-btn{ng-if: 'proposal.isNew()', type: 'submit', translate: 'proposal_form.start_proposal'}
+    %button.btn.btn-primary.cuke-save-proposal-btn{ng-if: '!proposal.isNew()', type: 'submit', translate: 'common.action.save'}
     %button.btn.btn-warning.cuke-cancel-proposal-btn{ng-click: 'cancel($event)', type: 'button', translate: 'common.action.cancel'}
