--- a/lineman/app/modules/discussion_page/discussion_form/discussion_form.haml
+++ b/lineman/app/modules/discussion_page/discussion_form/discussion_form.haml
@@ -1,6 +1,6 @@
-%form{name: 'discussionForm', ng_submit: 'submit()', ng-disabled: 'discussion.saving'}
+%form{name: 'discussionForm', ng_submit: 'save()', ng-disabled: 'discussion.processing'}
   .modal-header
-    %button{type: 'button', class: 'close', ng-click: 'cancel($event)'}
+    %button{type: 'button', class: 'close', ng-click: '$close()'}
       %span{aria-hidden: true} &times;
       %span.sr-only{translate: 'common.action.cancel'}
     %h1.modal-title{translate: 'discussion_form.new_discussion_title', ng_show: 'discussion.isNew()'}
@@ -53,4 +53,4 @@
   .modal-footer
     %button.btn.btn-primary{type: 'submit', translate: 'discussion_form.new_discussion_submit', ng_show: 'discussion.isNew()' }
     %button.btn.btn-primary{type: 'submit', translate: 'discussion_form.edit_discussion_submit', ng_hide: 'discussion.isNew()' }
-    %button.btn.btn-warning{type: 'button', ng-click: 'cancel($event)', translate: 'common.action.cancel'}
+    %button.btn.btn-warning{type: 'button', ng-click: '$close()', translate: 'common.action.cancel'}
