--- a/lineman/app/modules/inbox/inbox.scss
+++ b/lineman/app/modules/inbox/inbox.scss
@@ -1,4 +1,4 @@
-.container#main.inboxPinned {
+.container#main {
   @media (min-width: $screen-sm-min){
     margin-left: $sidebar-width;
     max-width: $container-sm - $sidebar-width;
