--- a/lineman/app/modules/memberships_page/memberships_page.haml
+++ b/lineman/app/modules/memberships_page/memberships_page.haml
@@ -1,4 +1,4 @@
-.container#main{ng-class: '{inboxPinned: inboxPinned()}'}
+.container#main
   .form-card
     %h1
       %a{href:'/g/{{group.key}}'} {{group.name}}
