--- a/lineman/app/modules/navbar/navbar.haml
+++ b/lineman/app/modules/navbar/navbar.haml
@@ -1,5 +1,5 @@
 %header#header
-  %nav.loomio-nav.clearfix{role: 'navigation', ng-class: '{inboxPinned: inboxPinned()}'}
+  %nav.loomio-nav.clearfix{role: 'navigation'}
     %ul.loomio-nav-items
       %li
         %a.loomio-nav-btn{href: '/'}
