--- a/lineman/app/modules/navbar/navbar_inbox.haml
+++ b/lineman/app/modules/navbar/navbar_inbox.haml
@@ -1,4 +1,4 @@
-%li{dropdown: '', on-toggle: 'toggleInbox(open)', ng-if: '!inboxPinned()'}
+%li.visible-xs{dropdown: '', on-toggle: 'toggleInbox(open)'}
   %a.loomio-nav-btn.has-badge.dropdown-toggle.cuke-nav-inbox-btn{href: '#'}
     / lets put unread counts in here:
     %span.badge
