--- a/lineman/app/modules/discussion_page/discussion_page.haml
+++ b/lineman/app/modules/discussion_page/discussion_page.haml
@@ -4,7 +4,7 @@
       .thread-container
         .thread-actions.pull-right
           .dropdown.thread-notification-level
-            %a.dropdown-toggle{href:''}
+            %a.dropdown-toggle.fat-finger{href:''}
               %i.fa.fa-lg.fa-volume-down>
             .dropdown-menu.dropdown-menu-with-labels.dropdown-menu-right
               %h3.dropdown-heading{translate: 'notifications.header'}
