--- a/lineman/app/modules/layout.scss
+++ b/lineman/app/modules/layout.scss
@@ -14,3 +14,12 @@
   z-index: 0;
   min-width: 320px;
 }
+#sidebar{
+  height: 100%;
+  overflow: scroll;
+  position: fixed;
+  width: 320px;
+  background: white;
+  border: 1px solid $thread-border-color;
+  padding-top: 60px;
+}
