--- a/lineman/app/modules/selector_list.scss
+++ b/lineman/app/modules/selector_list.scss
@@ -1,15 +1,3 @@
-#sidebar .selector-list{
- height: 100%;
- overflow: scroll;
- position: fixed;
- width: 320px;
- background: white;
- border: 1px solid $thread-border-color;
-}
-#sidebar .selector-list{
-  padding-top: 54px;
-}
-
 .selector-list{
   list-style-type: none;
   padding: 0;
@@ -19,21 +7,27 @@
   overflow-y:scroll;
 }
 .selector-list-header {
-  padding: 0 15px;
+  padding: 0 10px;
   width: 100%;
   border-bottom: 1px solid #ddd;
 }
+.selector-list-header .dropdown {
+  padding: 0 0 10px 0;
+}
 .selector-list-item {
-  border-bottom: 1px solid #ddd;
-  padding: 8px;
+  border-bottom: 1px solid #eee;
+  padding: 10px;
   @media (max-width: 320px){ padding: 15px 20px; }
   width: 100%;
   clear: both;
 }
+.selector-list-item i{
+  color: $meta-text-color;
+}
 .selector-list-item-link{
   display: block;
-  margin: -8px;
-  padding: 8px;
+  margin: -10px;
+  padding: 10px;
   color: $primary-text-color;
 }
 .selector-list-item-link:hover{
@@ -53,10 +47,17 @@
 .selector-list-item.is-read{
   background-color: $light-grey;
 }
+.is-unread .selector-list-item-discussion-title{
+  font-weight: bold;
+}
+.selector-list-item-unread-comment-count {
+  font-weight: normal;
+  padding-left: 8px;
+  @include fontSmall;
+}
 .selector-list-item-proposal {
   margin: 5px 0;
   .time-left {
-    color: #FAA82C;
     @include fontHelvetica;
     @include fontSmall;
   }
@@ -66,9 +67,6 @@
   @include fontHelvetica;
   @include fontMedium;
   margin-bottom: 5px;
-}
-.is-unread .selector-list-item-discussion-title{
-  font-weight: bold;
 }
 a .selector-list-item-proposal-details {
   color: $meta-text-color;
