--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -1,5 +1,5 @@
 .row
   .col-md-6
     #intro
-      %h1 Start your group
+      %h1= t(:start_your_group)
       = render 'form', group: @group, submit_text: t(:"common.start_group")
