--- a/lineman/app/modules/discussion_page/proposals_card/proposal_form/closing_at_field.haml
+++ b/lineman/app/modules/discussion_page/proposals_card/proposal_form/closing_at_field.haml
@@ -1,9 +1,14 @@
 %fieldset
   .form-group{dropdown: '', is-open: 'dropdownIsOpen'}
     %label{for: 'proposal-close-date-field', translate: 'proposal_form.closes_at_label'}
-    .input-group.dropdown-toggle
-      %input.form-control{ng-model: 'proposal.closingAt', ng-required: 'true'}
-      %span.input-group-addon
-        %i.fa.fa-calendar
-    .dropdown-menu{role: 'menu'}
-      %datetimepicker{ng-model: 'proposal.closingAt', data-datetimepicker-config: "{ startView:'day', minView:'hour'}", on-set-time: 'closeDateTimePicker()'}
+    .closing-at-timezone.pull-right
+      I am the timezone
+    .dropdown
+      .input-group.dropdown-toggle
+        %input.form-control{ng-model: 'proposal.closingAt', ng-required: 'true'}
+        %span.input-group-addon
+          %i.fa.fa-calendar
+      .closing-at-time-in-words
+        %timeago{timestamp: 'proposal.closingAt'}>
+      .dropdown-menu-right.dropdown-menu{role: 'menu'}
+        %datetimepicker{ng-model: 'proposal.closingAt', data-datetimepicker-config: "{ startView:'day', minView:'hour'}", on-set-time: 'closeDateTimePicker()'}
