--- a/lineman/app/modules/discussion_page/proposals_card/proposal_expanded/proposal_expanded.scss
+++ b/lineman/app/modules/discussion_page/proposals_card/proposal_expanded/proposal_expanded.scss
@@ -37,3 +37,8 @@
 .pie-chart-legend-item-block{
   border-left: 15px solid #dd0000;
 }
+
+.proposal-expanded-votes-trigger {
+  padding: 10px 0;
+  cursor: pointer;
+}
