Squashed commit of the following:
commit 10a36652a24a50b9f6a97c74d9ec6c03bbe82c8b
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Wed Jan 14 20:13:46 2015 +1300

    Replace endpoints interface with client wrappers

commit 9fe72a8373d24761f3b386d1f781adac0ca0a51b
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Tue Jan 6 10:13:05 2015 +1300

    Pass spec for invitations

commit 261fff1efc71eed705d36d9f4c2550125de1c84c
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Mon Jan 5 16:59:10 2015 +1300

    Add integration test (WIP)

commit fa1655b7d835234c9090005b4ed7034c18603259
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Mon Jan 5 16:27:44 2015 +1300

    Fix invitations workflow

--- a/lineman/app/modules/group_page/invitation_modal.haml
+++ b/lineman/app/modules/group_page/invitation_modal.haml
@@ -5,7 +5,7 @@
     .clearfix
   .modal-body
     %h4{translate: 'invitation.find_people'}
-    %input.form-control#invitable-email{type: 'email', ng-model: 'fragment', typeahead: 'invitable for invitable in getInvitables($viewValue)', typeahead-template-url: 'generated/templates/invitable_menu.html', typeahead-on-select: 'addInvitation($item)', typeahead-wait-ms: '300'}
+    %input.form-control#invitable-email{type: 'email', ng-model: 'fragment', typeahead: 'invitable for invitable in getInvitables($viewValue)', typeahead-template-url: 'generated/modules/group_page/invitable_menu.html', typeahead-on-select: 'addInvitation($item)', typeahead-wait-ms: '300'}
     .invitation-instructions{ng_hide: 'hasInvitations()'}
       {{ 'invitation.instructions' | translate }}
     .current-invitations{ng_show: 'hasInvitations()'}
@@ -17,5 +17,5 @@
       %textarea.form-control{ng-model: 'message'}
 
   .modal-footer
-    %button.btn.btn-primary{type: 'submit', translate: 'invitation.send_invite'}
+    %button.btn.btn-primary.cuke-group-invitation-submit{type: 'submit', translate: 'invitation.send_invite'}
     %button.btn.btn-warning{ng-click: 'cancel($event)', translate: 'common.action.cancel'}
