update address for loomio coop

--- a/app/views/pages/terms_of_service.html.haml
+++ b/app/views/pages/terms_of_service.html.haml
@@ -112,12 +112,10 @@
       %p
         Loomio is made with love by the fine humans of the Loomio Co-operative Limited, a worker-owned and New Zealand registered co-operative company located at:
       %p
-        Enspiral Space
+        Loomio Co-operative
         %br
-        Level 2, 18-24 Allen Street,
+        PO Box 19069, Level 2, 89 Courtenay Place
         %br
-        Te Aro Wellington CBD,
-        %br
-        6011 Aotearoa / New Zealand
+        Wellington, 6149 , Aotearoa / New Zealand
       %p
         Our payment processor obliges us to tell you that delivery is instantaneous, and no refunds will be given.
