small stylefix for nested bullet-point markdown lists

--- a/app/assets/stylesheets/unstructured/_discussions.css.scss
+++ b/app/assets/stylesheets/unstructured/_discussions.css.scss
@@ -442,6 +442,12 @@ body.discussions.show {
             position: relative;
             top: -12px;
             margin-bottom: -12px;
+          }
+          ul {
+            clear: left;
+            position: relative;
+            top: -12px;
+            margin-bottom: -12px;
         }}
         ol, p, ul {
           color: $text-black;
