--- a/app/assets/stylesheets/unstructured/_pages.css.scss
+++ b/app/assets/stylesheets/unstructured/_pages.css.scss
@@ -536,9 +536,14 @@ body.pages.privacy .container h3.subheader { margin-bottom: 24px; }
     .signin_container {
       color: #555;
       a { text-align: left; }
-      .btn-container{ text-align: center; }
+      .btn-container {
+        padding-left: 5px;
+        padding-right: 5px;
+        text-align: center;
+      }
       .sso-btn-row { margin-bottom: 2em; }
       .login {
+        font-size: 15px;
         text-align: center;
         opacity: .9;
       }
@@ -609,55 +614,37 @@ body.pages.privacy .container h3.subheader { margin-bottom: 24px; }
   #direct_contact { margin-top: 101px; }
 }
 
-.btn-facebook {
-  background-color: hsl(218, 70%, 20%) !important;
+@mixin social-button($from, $to) {
+  background-color: $to !important;
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#163e82", endColorstr="#0f2956");
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#163e82), to(#0f2956));
-  background-image: -moz-linear-gradient(top, #163e82, #0f2956);
-  background-image: -ms-linear-gradient(top, #163e82, #0f2956);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #163e82), color-stop(100%, #0f2956));
-  background-image: -webkit-linear-gradient(top, #163e82, #0f2956);
-  background-image: -o-linear-gradient(top, #163e82, #0f2956);
-  background-image: linear-gradient(#163e82, #0f2956);
-  border-color: #0f2956 #0f2956 hsl(218, 70%, 17.5%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#{$from}", endColorstr="#{$to}");
+  background-image: -khtml-gradient(linear, left top, left bottom, from($from), to($to));
+  background-image: -moz-linear-gradient(top, $from, $to);
+  background-image: -ms-linear-gradient(top, $from, $to);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, $from), color-stop(100%, $to));
+  background-image: -webkit-linear-gradient(top, $from, $to);
+  background-image: -o-linear-gradient(top, $from, $to);
+  background-image: linear-gradient($from, $to);
+  border-color: $from $to;
   color: #fff !important;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.16);
   -webkit-font-smoothing: antialiased;
 }
 
+.btn-facebook {
+  @include social-button(#163e82, #0f2956);
+}
+
 .btn-google {
-  background-color: hsl(8, 68%, 46%) !important;
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#EC4D33", endColorstr="#C43B25");
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#EC4D33), to(#C43B25));
-  background-image: -moz-linear-gradient(top, #EC4D33, #C43B25);
-  background-image: -ms-linear-gradient(top, #EC4D33, #C43B25);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #EC4D33), color-stop(100%, #C43B25));
-  background-image: -webkit-linear-gradient(top, #EC4D33, #C43B25);
-  background-image: -o-linear-gradient(top, #EC4D33, #C43B25);
-  background-image: linear-gradient(#EC4D33, #C43B25);
-  border-color: #C43B25 #C43B25 hsl(8, 68%, 46%);
-  color: #fff !important;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.13);
-  -webkit-font-smoothing: antialiased;
+  @include social-button(#EC4D33, #C43B25);
 }
 
 .btn-persona {
-  background-color: hsl(37, 97%, 43%) !important;
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fb9e08", endColorstr="#d88603");
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#fb9e08), to(#d88603));
-  background-image: -moz-linear-gradient(top, #fb9e08, #d88603);
-  background-image: -ms-linear-gradient(top, #fb9e08, #d88603);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fb9e08), color-stop(100%, #d88603));
-  background-image: -webkit-linear-gradient(top, #fb9e08, #d88603);
-  background-image: -o-linear-gradient(top, #fb9e08, #d88603);
-  background-image: linear-gradient(#fb9e08, #d88603);
-  border-color: #d88603 #d88603 hsl(37, 97%, 41%);
-  color: #fff !important;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.13);
-  -webkit-font-smoothing: antialiased;
+  @include social-button(#fb9e08, #d88603);
+}
+
+.btn-twitter {
+  @include social-button(#7BB3D3, #95C4DD);
 }
 
 body.pages.crowd {
