--- a/lineman/app/modules/group_page/group_form.haml
+++ b/lineman/app/modules/group_page/group_form.haml
@@ -1,10 +1,11 @@
 .container#main
   %form.form-card{name: 'groupForm', ng_submit: 'submit()'}
-    %h1{ng_show: 'group.isNew() && !group.parentId', translate: 'group_form.new_group_title'}
-    %h1{ng_show: 'group.isNew() && group.parentId', translate: 'group_form.new_subgroup_title', translate-value-parent-group-name: '{{group.parentName()}}'}
-    %h1{ng_show: '!group.isNew()', translate: 'group_form.edit_group_title'}
-    .form-group
-      %h2{translate: 'group_form.profile_label'}
+    %fieldset{ng_disabled: 'isDisabled'}
+      %h1{ng_show: 'group.isNew() && !group.parentId', translate: 'group_form.new_group_title'}
+      %h1{ng_show: 'group.isNew() && group.parentId', translate: 'group_form.new_subgroup_title', translate-value-parent-group-name: '{{group.parentName()}}'} 
+      %h1{ng_show: '!group.isNew()', translate: 'group_form.edit_group_title'}
+      .form-group
+        %h2{translate: 'group_form.profile_label'}
 
         %label{for: 'group-name-field', translate: 'group_form.name_label'}
         %input#group-name-field.form-control{placeholder: "{{ 'group_form.name_placeholder' | translate }}", ng-model: 'group.name', ng_required: 'true'}
@@ -15,17 +16,17 @@
       .form-group
         %h2{translate: 'group_form.privacy.label'}
 
-      %label{for: 'group-visible-to-members', translate: 'group_form.privacy.visible_to_members'}
-      %select#group-visible-to-members-field.form-control{ng_model: 'group.visibleTo', ng_required: true}
-        %option{value: 'public', ng_show: '!group.parentIsHidden()', translate: 'group_form.privacy.public_visibility'}
-        %option{value: 'parent_members', ng_show: 'group.parent()', translate: 'group_form.privacy.organization_visibility'}
-        %option{value: 'members', translate: 'group_form.privacy.private_visibility'}
+        %label{for: 'group-visible-to-members', translate: 'group_form.privacy.visible_to_members'}
+        %select#group-visible-to-members-field.form-control{ng_model: 'group.visibleTo', ng_required: true}    
+          %option{value: 'public', ng_show: '!group.parentIsHidden()', translate: 'group_form.privacy.public_visibility'}
+          %option{value: 'parent_members', ng_show: 'group.parent()', translate: 'group_form.privacy.organization_visibility'}
+          %option{value: 'members', translate: 'group_form.privacy.private_visibility'}
 
-      %label{for: 'group-membership-granted-upon', translate: 'group_form.privacy.membership_granted_upon'}
-      %select#group-membership-granted-upon-field.form-control{ng_model: 'group.membershipGrantedUpon', ng_required: true}
-        %option{value: 'request', translate: 'group_form.privacy.membership_by_request'}
-        %option{value: 'approval', translate: 'group_form.privacy.membership_by_approval'}
-        %option{value: 'invitation', translate: 'group_form.privacy.membership_by_invitation'}
+        %label{for: 'group-membership-granted-upon', translate: 'group_form.privacy.membership_granted_upon'}
+        %select#group-membership-granted-upon-field.form-control{ng_model: 'group.membershipGrantedUpon', ng_required: true}  
+          %option{value: 'request', translate: 'group_form.privacy.membership_by_request'}
+          %option{value: 'approval', translate: 'group_form.privacy.membership_by_approval'}
+          %option{value: 'invitation', translate: 'group_form.privacy.membership_by_invitation'}
 
         %label{for: 'group-discussion-privacy-options', translate: 'group_form.privacy.discussion_privacy_options'}
         %select#group-discussion-privacy-options-field.form-control{ng_model: 'group.discussionPrivacyOptions', ng_required: true}
